--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
-h1 {font-family: "Times New Roman", Times, serif;color:red; font-size:22px; left: 50%; right: 50%;}
+h1 {font-family: "Times New Roman", Times, serif;color:red;
+ font-size:40px; position: relative; left: 40%; right: 50%;}
+.p1 {font-family: "Times New Roman", Times, serif;color: brown; font-size:15px;
+ position: relative; left: 40%; right: 50%;}
+table {position: absolute right; border-style: solid; border-color: red;}
+ul { position: relative; left: 20%; right: 25%;}
 p {font-family: "Times New Roman", Times, serif;color: brown; font-size:15px;}
-table {position: absolute right; border-style: solid}
+footer {position: relative; right: 50%; left: 50%;}
+img {position:relative; right: 50%;left:18%;} 
 
 article {
   position: relative;
+  left:40%;
+  right:50%;
   width: 400px;
   height: 200px;
   border: 3px solid #73AD21;
 } 
+
+
 
 
